<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaperprincipal"
    tools:context=".NivelBaseFragment">

    <TextView
        android:id="@+id/tv_manzanas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etVidas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_score"
        app:layout_constraintTop_toBottomOf="@+id/tv_score"
        app:layout_constraintVertical_bias="0.068" />

    <ImageView
        android:id="@+id/iv_vidas"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/tv_manzanas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_manzanas"
        app:layout_constraintTop_toTopOf="@+id/tv_manzanas"
        app:layout_constraintVertical_bias="0.333"
        app:srcCompat="@drawable/tresvidas" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalScore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_nombre"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jugadorNombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/iv_Signo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/iv_Auno"
        app:layout_constraintStart_toEndOf="@+id/iv_Auno"
        app:layout_constraintTop_toTopOf="@+id/iv_Auno"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/adicion" />

    <ImageView
        android:id="@+id/iv_Auno"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_vidas"
        app:srcCompat="@drawable/cero" />

    <ImageView
        android:id="@+id/iv_Ados"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/iv_Signo"
        app:layout_constraintStart_toEndOf="@+id/iv_Signo"
        app:layout_constraintTop_toTopOf="@+id/iv_Signo"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/cero" />

    <EditText
        android:id="@+id/et_respuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/etRespuesta"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_Signo" />

    <Button
        android:id="@+id/btnComprobar"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/fondoboton"
        android:onClick="comparar"
        android:text="@string/botonSumar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/et_respuesta"
        app:layout_constraintStart_toEndOf="@+id/et_respuesta"
        app:layout_constraintTop_toTopOf="@+id/et_respuesta"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
