<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/globos"
    android:orientation="vertical"
    tools:context=".MainFragment">

    <ImageView
        android:id="@+id/iVPersonaje"
        android:layout_width="230dp"
        android:layout_height="217dp"
        android:contentDescription="@string/personaje"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206"
        app:srcCompat="@drawable/manzana"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="196dp"
        android:autofillHints=""
        android:background="@drawable/fondoet"
        android:ems="10"
        android:hint="@string/comoTeLlamas"
        android:inputType="textPersonName"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary_dark"
        android:textColorHint="@color/colorPrimary_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnJugar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="116dp"
        android:background="@drawable/fondoboton"
        android:text="@string/jugar"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tVBestScore"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/fondoet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJugar"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
